@@ -50,9 +50,11 @@ LOAD_MAP = { synglob.ID_LANG_ADA : TAGLIB + 'adatags',
              synglob.ID_LANG_OCTAVE : TAGLIB + 'matlabtags',
              synglob.ID_LANG_PERL : TAGLIB + 'perltags',
              synglob.ID_LANG_PHP : TAGLIB + 'phptags',
+             synglob.ID_LANG_PLSQL : TAGLIB + 'sqltags',
              synglob.ID_LANG_PROPS : TAGLIB + 'conftags',
              synglob.ID_LANG_PYTHON : TAGLIB + 'pytags',
              synglob.ID_LANG_SCHEME : TAGLIB + 'schemetags',
+             synglob.ID_LANG_SQL : TAGLIB + 'sqltags',
              synglob.ID_LANG_TCL : TAGLIB + 'tcltags',
              synglob.ID_LANG_VERILOG : TAGLIB + 'verilogtags' }
 
